--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
 					<div class="twelve columns remove-top">
 						<div class="contact-det-wrap" data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">
 							<div class="contact-det">
-								<p>1. <span>drop us a line</span></p>
+								<p>1. <span>drop us a line on</span></p>
+								<h6>Our Email:</h6>
 								<h6>info@litami.in</h6>
 							</div>
 							<div class="contact-det">
