--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 							<div class="contact-det">
 								<p>1. <span>drop us a line on</span></p>
 								<h6>Our Email:</h6>
-								<h6>info@litami.in</h6>
+								<h6>info@litamii.in</h6>
 							</div>
 							<div class="contact-det">
 								<p>2. <span>call us</span></p>
